Changed boards to each have indivual canvas for sliding animation to work. This rebuild fixed issue with window open animation not showing! Moved most of code to game from main (i.e. html elements, etc.)

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,13 @@ body {
 	margin: 0;
 	padding: 0;
     
-    background-color: black;
+    background-color: #15718F;
 }
 
 canvas {
+	position: fixed;
+	top: 0;
+	left: 0;
     margin: 0px;
     width: 100%;
     height: 100vh;
@@ -24,6 +27,25 @@ canvas {
     cursor: -webkit-grab;
     cursor: -moz-grab;
     cursor: grab;
+    z-index: -1;
+}
+
+@keyframes canvasEnterR {
+    from { left: 100vw }
+}
+
+
+@keyframes canvasLeaveR {
+    to { left: 100vw }
+}
+
+@keyframes canvasEnterL {
+    from { left: -100vw }
+}
+
+
+@keyframes canvasLeaveL {
+    to { left: -100vw }
 }
 
 header {
